--- a/Annexes.tex
+++ b/Annexes.tex
@@ -1,10 +1,11 @@
 \section*{Annexes}
 \addcontentsline{toc}{section}{Annexes}
-\subsubsection*{Planning de projet}
-\subsubsection*{Fiches techniques}
 
-%Planning
-\textbf{Planning}
+\subsubsection*{Annexe A: Planning de projet}
+
+\subsubsection*{Annexe B: Dossier de fabrication}
+
+\subsubsection*{Annexe C: Fiches techniques}
 
 %Anneau de LEDs
 \textbf{Anneau de LEDs Adafruit NeoPixel Ring, Berrybase}
@@ -39,62 +40,46 @@
 % Pieds réglables
 \textbf{Pieds réglables GN6311.6, Elesa}
 
-%Mises en plans des pièces mécaniques
-\textbf{Mise en plan du couplage de l'encodeur}
-\newline \textbf{Mise en plan du couplage de la tige}
-\newline \textbf{Mise en plan de la liaison du chariot}
-\newline \textbf{Mise en plan de la liaison du moteur}
-\newline \textbf{Mise en plan du support de l'amortisseur}
-\newline \textbf{Mise en plan du deuxième support de l'amortisseur}
-\newline \textbf{Mise en plan du support de guidage de câble}
-\newline \textbf{Mise en plan du support des pieds}
-\newline \textbf{Mise en plan du support de la tête de lecture}
-
 \iffalse
 
-  %Planning
-  \includepdf[pages=-,landscape=true]{Annexes/2022-03-28 Planning.pdf}
+    %Planning
+    \includepdf[pages=-,rotateoversize]{Annexes/2022-03-28 Planning.pdf}
 
-  %Anneau de LEDs
-  \includepdf[pages=-]{Annexes/anneau de Led.pdf}
+    %Mises en plans des pièces mécaniques
+    \includepdf[pages={1-3},landscape=false]{Annexes/DossierFabrication}
+    \includepdf[pages={4-14},landscape=true]{Annexes/DossierFabrication}
+    \includepdf[pages={15-16},landscape=true,fitpaper]{Annexes/DossierFabrication}
+    \includepdf[pages={17},landscape=true]{Annexes/DossierFabrication}
 
-  % Boitier et composants d'alimentation
-  \includepdf[pages=-]{Annexes/Boitier alimentation}
-  \includepdf[pages=-]{Annexes/Arret d'urgence}
-  \includepdf[pages={1,3-7}]{Annexes/Bouton d'alimentation}
-  \includepdf[pages=-]{Annexes/Bouton lumineux}
-  \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
-  \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
+    %Anneau de LEDs
+    \includepdf[pages=-]{Annexes/anneau de Led.pdf}
 
-  % Encodeur
-  \includepdf[pages={1,4-7}]{Annexes/Encodeur TMCS-20}
-  \includepdf[pages={1-12}]{Annexes/Montage encodeur}
+    % Boitier et composants d'alimentation
+    \includepdf[pages=-]{Annexes/Boitier alimentation}
+    \includepdf[pages=-]{Annexes/Arret d'urgence}
+    \includepdf[pages={1,3-7}]{Annexes/Bouton d'alimentation}
+    \includepdf[pages=-]{Annexes/Bouton lumineux}
+    \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
+    \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
 
-  % Roulements
-  \includepdf[pages={1-3}]{Annexes/Roulement SKF W 61700 X-2RS1}
+    % Encodeur
+    \includepdf[pages={1,4-7}]{Annexes/Encodeur TMCS-20}
+    \includepdf[pages={1-12}]{Annexes/Montage encodeur}
 
-  % Moteur linéaire
-  \includepdf[pages=-]{Annexes/Moteur lineaire}
+    % Roulements
+    \includepdf[pages={1-3}]{Annexes/Roulement SKF W 61700 X-2RS1}
 
-  % Driver Moteur
-  \includepdf[pages={1,10,18,25-37,46-65}]{Annexes/EPOS4-Module-Compact}
+    % Moteur linéaire
+    \includepdf[pages=-]{Annexes/Moteur lineaire}
 
-  % Règle linéaire
-  \includepdf[pages={1,4-7,11,13}]{Annexes/Montage regle lineaire}
-  \includepdf[pages={1,4-5,7-9,}]{Annexes/Tete de lecture}
+    % Driver Moteur
+    \includepdf[pages={1,10,18,25-37,46-65}]{Annexes/EPOS4-Module-Compact}
 
-  % Pieds réglables
-  \includepdf[pages=-]{Annexes/Pieds reglable}
+    % Règle linéaire
+    \includepdf[pages={1,4-7,11,13}]{Annexes/Montage regle lineaire}
+    \includepdf[pages={1,4-5,7-9,}]{Annexes/Tete de lecture}
 
-  %Mises en plans des pièces mécaniques
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Couplage Encodeur}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Couplage Tige}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Liaison chariot}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Liaison Moteur}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Amortisseur}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Amortisseur 2}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Guidage Cable}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Pieds}
-  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Tete Lecture}
+    % Pieds réglables
+    \includepdf[pages=-]{Annexes/Pieds reglable}
 
 \fi
