--- a/CalculPre.tex
+++ b/CalculPre.tex
@@ -18,7 +18,8 @@ Ces valeurs pourront être ajustées si jamais les calculs montrent qu'elles ne 
     \end{tabular}%
 \end{table}
 
-On estime la masse totale qui bouge à l'aide des approximations suivantes en prennant les éléments mentionnés dans le chapitre \ref{sec:PartMob}:
+On estime la masse totale qui bouge à l'aide des approximations suivantes en prennant les éléments mentionnés dans le chapitre \ref{sec:PartMob}
+et représentés dans la figure \ref{fig:StructPrelim}:
 \begin{itemize}
     \item Tige en polycarbonate de 10~mm de diamètre: $\sim$50~g
     \item Glider moteur linéaire: $\sim$200~g
