--- a/Imprevus.tex
+++ b/Imprevus.tex
@@ -14,14 +14,14 @@ la charge de chaque côté de la rainure et d'empêcher le rail de pencher en re
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.9\textwidth]{assets/figures/PlaqueFixation1.png}
+    \includegraphics[width = 0.7\textwidth]{assets/figures/PlaqueFixation1.svg}
     \caption{Illustration de la première plaque de fixation pour le rail magnétique}
     \label{fig:PlaqueFix1}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.9\textwidth]{assets/figures/PlaqueFixation2.png}
+    \includegraphics[width = 0.9\textwidth]{assets/figures/PlaqueFixation2.svg}
     \caption{Illustration de la seconde plaque de fixation pour le rail magnétique}
     \label{fig:PlaqueFix2}
 \end{figure}
