--- a/Mecanique.tex
+++ b/Mecanique.tex
@@ -1,25 +1,27 @@
 Plusieurs pièces mécaniques ont dû être développées pendant ce projet comme par exemple le support de pieds  qui a déjà été décrit au chapitre \ref{sec:DescStruct}.
 Maintenant que les éléments sont en place, il faut les lier ensemble avec des pièces faites sur mesure. Toutes les pièces sont faîtes
-d'aluminium EN-AW 6082 sauf si mentionné autrement.
+d'aluminium EN-AW 6082 sauf si mentionné autrement. Les dimensions indiquées sur les figures sont en mm sauf sin mentionné autrement.
 
 \section{Liaison Moteur-Glider}\label{sec:LiaisonMotGlid}
 La liaison entre le chariot du guidage et le \gls{glider} du moteur va se faire en deux pièces vissées ensemble. La pièce
-connectée au chariot devra accueillir deux roulements qui servent à faire tourner la partie qui tient la tige du pendule. Une zone pour placer
-un anneau de LEDs est aussi nécessaire afin de pouvoir illuminer la tige. Enfin, cette pièce devra aussi accueillir l'encodeur pour la position
-angulaire. La fixation sur le chariot se fait avec quatre vis M5 ce qui nécessitera donc des lamages. La fixation sur l'autre pièce se fait sur
-le dessous de la pièce avec quatre taraudages M5. Un rebord pour l'indexage avec l'autre pièce est aussi présent. On obtient la pièce suivante.
+connectée au chariot devra accueillir deux roulements qui servent à faire tourner la partie qui tient la tige du pendule. Une tolérance h6 est
+présente sur le diamètre intérieur pour les roulements en suivant les spécifications des normes \cite{Ajustements}. Une zone pour placer un anneau de LEDs est aussi nécessaire afin de pouvoir illuminer
+la tige. Enfin, cette pièce devra aussi accueillir l'encodeur pour la position angulaire. La fixation sur le chariot se fait avec quatre vis M5
+ce qui nécessitera donc des lamages. La fixation sur l'autre pièce se fait sur le dessous de la pièce avec quatre taraudages M5. Deux perçages
+sont présents avec une tolérance H7 pour des goupilles qui permettent l'indexage avec l'autre pièce . On obtient la pièce suivante.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonChariot.svg}
+  \includegraphics[width = 0.6\textwidth]{assets/figures/LiaisonChariot.svg}
   \caption{Représentation de la pièce de liaison du chariot}
   \label{fig:LiaisonChariot}
 \end{figure}
 
-La seconde pièce devra évidemment se lier avec la première, mais aussi avec le moteur. La première pièce ayant les taraudages, celle-ci aura quatre
-lamages M5. Pour la fixation au moteur, quatre lamages M3 suffiront. Deux autres éléments viennent encore se fixer sur cette pièce: le support de
-la tête de lecture pour la règle linéaire et la chaîne porte-câbles. Pour le support de tête de lecture, trois taraudages M4 sont placés sur un côté,
-alors que deux trous taraudés sont utilisés pour fixer la chaîne porte-câbles. Finalement, voilà à quoi ressemble la pièce.
+La seconde pièce devra évidemment se lier avec la première, mais aussi avec le moteur. La première pièce ayant les taraudages, celle-ci aura
+quatre lamages M5 ainsi que deux trous avec la tolérance K7 pour les goupilles d'indexage. Pour la fixation au moteur, quatre lamages M3 suffiront. Deux autres
+éléments viennent encore se fixer sur cette pièce: le support de la tête de lecture pour la règle linéaire et la chaîne porte-câbles. Pour le
+support de tête de lecture, trois taraudages M4 sont placés sur un côté, alors que deux trous taraudés sont utilisés pour fixer la chaîne
+porte-câbles. Finalement, voilà à quoi ressemble la pièce.
 
 \begin{figure}[H]
   \centering
@@ -58,23 +60,10 @@ Voici une représentation avec le support monté sur la liaison au moteur et ave
   \label{fig:AssMesLin}
 \end{figure}
 
-\section{Support fin de course}\label{sec:SupFinCourse}
-Les capteurs de fins de course seront placés à l'arrière de la structure de chaque côté du système. Ces capteurs se fixent dans des rainures et
-il faut un petit support pour pouvoir tenir le capteur et l'accrocher au système avec une vis d'où le lamage M3 nécessaire. Dans ce cas-ci, le
-support ne subit pas d'efforts particulier ce qui veut dire qu'il peut être fait en \acrshort{PLA} par impression 3D. Voici à quoi ressemble
-cette pièce.
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportFinCourse.png}
-  \caption{Représentation du support de fin de course}
-  \label{fig:SupFinCourse}
-\end{figure}
-
 \section{Support amortisseur}\label{sec:SupAmort}
 Les amortisseurs se trouvent à l'avant du système au bout de chaque côté de la course. Leur support doit être assez épais pour pouvoir supporter
 les chocs. Un trou taraudé M10 est nécessaire pour fixer l'amortisseur et deux lamages M4 permettent la fixation sur le profilé. Les deux amortisseurs
-étant dans des directions opposées, il faut créer un deux support symétriques pour pouvoir les fixer. Voici l'image d'un des supports.
+étant dans des directions opposées, il faut créer deux supports symétriques pour pouvoir les fixer. Voici l'image d'un des supports.
 
 \begin{figure}[H]
   \centering
@@ -83,19 +72,22 @@ les chocs. Un trou taraudé M10 est nécessaire pour fixer l'amortisseur et deux
   \label{fig:SupAmort}
 \end{figure}
 
-Le placement des supports de l'amortisseur et du fin de course sur un des côtés est visible sur cette image.
+Le placement des supports de l'amortisseur sur un des côtés est visible sur cette image.
 
 \begin{figure}[H]
   \centering
   \includegraphics[width = 0.8\textwidth]{assets/figures/PlacementSupports.svg}
-  \caption{Représentation du placement des supports de fin de course et de l'amortisseur pour un côté}
+  \caption{Représentation du placement de l'amortisseur pour un côté}
   \label{fig:PlaceSup}
 \end{figure}
 
 \section{Partie tournante}\label{sec:PartieTour}
 La partie tournante du système est composée de plusieurs pièces, dont une en \acrshort{PC}. Tout d'abord, la partie en contact direct
-avec les roulements et en couplage avec l'encodeur. Cette partie est aussi attachée à une autre pièce, le couplage à la tige, à l'aide de
-quatre taraudages M2. Voici à quoi elle ressemble.
+avec les roulements et en couplage avec l'encodeur. Cette partie est faites en 2 morceaux qui sont chassés ensemble et est aussi attachée
+à une autre pièce, le couplage à la tige, à l'aide de quatre taraudages M2. Ces deux pièces sont imbriquées l'une dans l'autre et il faut donc
+une tolérance sur le diamètre extérieur de la pièce de h6. Il faut aussi mettre une tolérance sur le diamètre intérieur qui définit la face où
+s'appuye les roulements donc une tolérance de M7 a été choisie car la bague extérieure du roulement est fixe par rapport aux efforts et ceux-ci
+sont faibles \cite{Ajustements}. Voici à quoi ressemble la première partie de la pièce.
 
 \begin{figure}[H]
   \centering
@@ -104,6 +96,8 @@ quatre taraudages M2. Voici à quoi elle ressemble.
   \label{fig:CouplEnco}
 \end{figure}
 
+Et voici la seconde partie qui vient se chasser dans le trou central de la première. C'est un arbre rectifié de 3~mm de diamètre et 32~mm
+de long en acier CK45.
 \begin{figure}[H]
   \centering
   \includegraphics[width = 0.3\textwidth]{assets/figures/CouplageEncodeur2.svg}
@@ -112,12 +106,13 @@ quatre taraudages M2. Voici à quoi elle ressemble.
 \end{figure}
 
 La pièce de couplage à la tige qui est attachée à celle montrée sur la figure \ref{fig:CouplEnco} est en \acrshort{PC}. Elle possède donc quatre
-lamages M2 pour pouvoir se visser sur la pièce précédente et aussi un perçage de 10~mm de diamètre pour venir fixer la tige par serrage.
+lamages M2 pour pouvoir se visser sur la pièce précédente et aussi un perçage de 10~mm de diamètre ajusté avec la tige qui sera chassée dedans.
+Une tolérance H7 est présente sur le diamètre intérieur de la pièce pour avoir un jeu incertain avec la pièce de couplage à l'encodeur.
 La pièce ressemble à ceci.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageTige.svg}
+  \includegraphics[width = 0.7\textwidth]{assets/figures/CouplageTige.svg}
   \caption{Représentation du couplage à la tige}
   \label{fig:CouplTige}
 \end{figure}
@@ -135,6 +130,68 @@ L'assemblage de ces différentes pièces ainsi que de la liaison au chariot et l
   \label{fig:AssPartieTour}
 \end{figure}
 
+Les forces qui s'appliquent aux roulements peuvent maintenant être calculées à l'aide du schéma de forces sur la figure \ref{fig:CalcRoul}.
+Les termes utilisés dans ce schéma sont les suivant:
+
+\begin{table}[H]
+  \centering
+  \caption{Valeurs utilisées pour les calculs}
+  \label{tab:ValCalcRoul}
+  \begin{tabular}{|l|l|l|l|}
+    \hline
+    \textbf{Donnée}                        & \textbf{Lettre} & \textbf{Valeur} & \textbf{Unité} \\ \hline
+    Masse de la tige                       & $m_T$           & 39              & $g$            \\ \hline
+    Masse du couplage à la tige            & $m_{CT}$        & 23              & $g$            \\ \hline
+    Masse du couplage à l'encodeur 1       & $m_{CE1}$       & 16              & $g$            \\ \hline
+    Masse du couplage à l'encodeur 2       & $m_{CE2}$       & 2               & $g$            \\ \hline
+    Accélération de la pesanteur sur Terre & $g$             & 9.81            & $m/s^2$        \\ \hline
+    Force radiale sur le roulement 1       & $F_{R1}$        & ?               & $N$            \\ \hline
+    Force radiale sur le roulement 2       & $F_{R2}$        & ?               & $N$            \\ \hline
+    Distance de $m_{CE2}$ à A              & $d_1$           & 1               & $mm$           \\ \hline
+    Distance de $F_{R1}$ à A               & $d_2$           & 4               & $mm$           \\ \hline
+    Distance de $m_{CE1}$ à A              & $d_3$           & 7.5             & $mm$           \\ \hline
+    Distance de $m_{CT}$ à A               & $d_4$           & 12.5            & $mm$           \\ \hline
+    Distance de $m_{T}$ à A                & $d_5$           & 30              & $mm$           \\ \hline
+  \end{tabular}%
+\end{table}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width = 0.8\textwidth]{assets/figures/CalculRoulements.svg}
+  \caption{Schéma de forces pour le calcul des efforts appliqués sur les roulements}
+  \label{fig:CalcRoul}
+\end{figure}
+
+Les formules suivantes peuvent être tirées à partir du schéma dans le but d'obtenir les valeurs de $F_{R1}$ et $F_{R2}$.\\
+Somme des moments de forces pour pièces statiques autour du point A:
+
+\begin{equation}
+  \begin{aligned}
+     & \Sigma \vec{M}_A = 0                                                                                                                                                       \\
+     & \Rightarrow  m_T \cdot \vec{g} \cdot d_5 + m_{CT} \cdot \vec{g} \cdot d_4 + m_{CE1} \cdot \vec{g} \cdot d_3 - m_{CE2} \cdot \vec{g} \cdot d_1 - \vec{F}_{R1} \cdot d_2 = 0 \\
+     & \Rightarrow  \vec{F}_{R1} = \vec{g} \cdot \frac{m_T \cdot d_5 + m_{CT} \cdot d_4 + m_{CE1} \cdot d_3 - m_{CE2} \cdot d_1}{d_2}                                             \\
+     & = 9.81 \cdot \frac{0.039 \cdot 0.03 + 0.023 \cdot 0.0125 + 0.016 \cdot 0.0075 - 0.002 \cdot 0.001}{0.004} = 3.9~N
+  \end{aligned}
+\end{equation}
+
+Somme des forces sur l'axe y pour pièces statiques:
+
+\begin{equation}
+  \begin{aligned}
+     & \Sigma \vec{F}_y = 0 \Rightarrow \vec{F}_{R1} - \vec{F}_{R2} - m_T \cdot \vec{g} - m_{CT} \cdot \vec{g} - m_{CE1} \cdot \vec{g} - m_{CE2} \cdot \vec{g} = 0 \\
+     & \Rightarrow \vec{F}_{R2} = \vec{F}_{R1} - \vec{g} \cdot (m_T + m_{CT} + m_{CE1} + m_{CE2})                                                                  \\
+     & = 3.9 - 9.81 \cdot (0.039 + 0.023 + 0.016 +0.002) = 3.1~N
+  \end{aligned}
+\end{equation}
+
+La plus grande force radiale trouvée est $F_{R1}$ avec 3.9~N ce qui, comparée à la charge statique de base $C_0$ de 220~N que l'on peut retoruver dans
+l'annexe C, est négligeable (moins de 2\% de la valeur). La valeur est même plus petite que la limite de fatigue du roulement $P_u$ qui vaut 9~N.
+Même avec des accélérationsm d'environ 3g lors du fonctionnement du système, les forces ne seront que 3 fois plus grandes et donc toujours
+plus faibles que la charge statique de base.\\
+
+Les roulements ne sont pas précontraints pour plusieurs raisons: il n'y a pas de force conséquente sur les roulements, la vitesse de rotation
+est pratiquement nulle en moyenne dû à la nature du mouvement que l'on veut effectuer et la présence d'un jeu sur l'axe de rotation n'est pas
+un problème.
 
 \section{Support pour chaîne porte-câbles}\label{sec:SupChainCable}
 La chaîne porte-câbles est fixée d'un côté à la liaison moteur comme précisé plus haut au chapitre \ref{sec:LiaisonMotGlid}. L'autre côté est
@@ -168,14 +225,14 @@ Enfin, voici l'assemblage de toutes les pièces mécaniques fabriquées avec la 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletFace.svg}
+  \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletFace.svg}
   \caption{Représentation de l'assemblage mécanique complet vu de face}
   \label{fig:AssCompFace}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletDerriere.svg}
+  \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletDerriere.svg}
   \caption{Représentation de l'assemblage mécanique complet vu de derrière}
   \label{fig:AssCompDerriere}
 \end{figure}
