--- a/Solutions.tex
+++ b/Solutions.tex
@@ -179,7 +179,9 @@ D'autres éléments sont encore nécessaires au bon fonctionnement du système.
 \subsection{Capteurs de fins de course}
 Des capteurs de fins de course sont importants non seulement pour détecter le chariot lorsqu'il s'approche d'un bord, mais aussi
 pour faire la mise à zéro au démarrage du système. Dans le cadre de ce projet des capteurs de proximité à contact Reed ont été choisis.
-Le choix s'est porté sur le capteur SME-8M-ZS-24V-K-2,5-OE de Festo \cite{Festo}.
+Le choix s'est porté sur le capteur MC-38 de chez Synacorp \cite{Synacorp}. Ce capteur est déjà disponible dans le stock de la \acrshort{Heig}
+et possède une résistance en dessous du Ohm lorsqu'un aimant se trouve devant. De plus, ce type de capteur possède une bande adhésive qui lui
+permet de se fixer en se collant.
 
 \subsection{Amortisseurs}
 Il y a aussi besoin d'amortisseurs en bout de course au cas où le chariot arriverait trop vite pour s'arrêter. Les facteurs clés pour le choix
