--- a/StructurePre.tex
+++ b/StructurePre.tex
@@ -10,3 +10,10 @@ du système, dans ce cas-ci, la position linéaire et la position angulaire de l
 pour connaître ces valeurs. Il y aura donc l'ajout d'un encodeur angulaire sur la partie mobile ainsi que de la tête de lecture d'un encodeur
 linéaire si ce dernier n'est pas déjà inclut dans le guidage linéaire choisit. Finalement, des pièces en aluminium sur mesure seront nécessaire
 pour lier tous ces éléments entre eux.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.7\textwidth]{assets/figures/StructPrelim.svg}
+    \caption{Structure préliminaire du système}
+    \label{fig:StructPrelim}
+\end{figure}
