--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,3 +3,4 @@
 \newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG}
 \newacronym{PC}{PC}{Polycarbonate}
 \newacronym{PLA}{PLA}{Acide polylactique}
+\newacronym{PMMA}{PMMA}{Polyméthacrylate de méthyle aussi appelé plexiglas}
