--- a/bibliography.bib
+++ b/bibliography.bib
@@ -134,12 +134,12 @@
   keywords = {Igus}
 }
 
-@online{Festo,
-  author   = {Festo},
-  title    = {Festo},
-  url      = {https://www.festo.com/ch/fr/},
-  addendum = {(accessed: 15.06.2023)},
-  keywords = {Festo}
+@online{Synacorp,
+  author   = {Synacorp},
+  title    = {Synacorp},
+  url      = {http://synacorp.my/v3/en/},
+  addendum = {(accessed: 06.07.2023)},
+  keywords = {Synacorp}
 }
 
 @online{Trinamic,
@@ -236,6 +236,46 @@
   url      = {https://www.skf.com/ch/fr},
   addendum = {(accessed: 18.06.2023)},
   keywords = {SKF}
+}
+
+@online{FreddyMudry,
+  author   = {Freddy Mudry},
+  title    = {Modélisation et régulation d'un pendule inversé},
+  url      = {https://freddy.mudry.org/public/NotesApplications/na_pendinvc.pdf},
+  addendum = {(accessed: 07.07.2023)},
+  keywords = {Freddy Mudry, Modélisation, Pendule inversé}
+}
+
+@online{Ajustements,
+  author   = {Matthieu Barreau},
+  title    = {Guidage en rotation par roulements},
+  url      = {http://barreau.matthieu.free.fr/cours/Liaison-pivot/pages/roulements-2.html},
+  addendum = {(accessed: 07.07.2023)},
+  keywords = {Matthieu Barreau, Roulements, Ajustements}
+}
+
+@online{Agro,
+  author   = {Agro},
+  title    = {Agro},
+  url      = {https://www.agro.ch/fr_CH/},
+  addendum = {(accessed: 07.07.2023)},
+  keywords = {Agro}
+}
+
+@online{Deltron,
+  author   = {Deltron Connectors},
+  title    = {Deltron Connectors},
+  url      = {https://www.deltron.ch/?___store=en},
+  addendum = {(accessed: 07.07.2023)},
+  keywords = {Deltron Connectors}
+}
+
+@online{Waveshare,
+  author   = {Waveshare},
+  title    = {Waveshare},
+  url      = {https://www.waveshare.com/},
+  addendum = {(accessed: 07.07.2023)},
+  keywords = {Waveshare}
 }
 
 % @article{einstein,
