--- a/report.tex
+++ b/report.tex
@@ -59,6 +59,9 @@
 \chapter{Cahier des charges fonctionnel}
 \input{CahierDesCharges.tex}
 
+\chapter{Théorie sur le pendule inversé}
+\input{TheoriePendule.tex}
+
 \chapter{Structure préliminaire}
 \input{StructurePre.tex}
 
@@ -89,19 +92,19 @@
 \clearpage
 \printbibliography
 
-\appendix
-\appendixpage
-\addappheadtotoc
-
-\let\cleardoublepage\clearpage
-\backmatter
-
 \label{glossaire}
 \printnoidxglossary
 \label{index}
 \printindex
 
+\appendix
+\appendixpage
+\addappheadtotoc
+
 \input{Annexes.tex}
+
+\let\cleardoublepage\clearpage
+\backmatter
 
 % Le colophon est le dernier élément d'un document qui contient des notes de l'auteur concernant la mise en page et l'édition du document : il est parfaitement optionnel.
 \input{colophon.tex}
